# cmake-project-template

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: Dockerfile  docker-compose.yml  makefile
ci/arm/: Dockerfile  README.md
ci/armv7hf/: Dockerfile
cmake/Modules/: project-config.cmake.in
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt
src/hello-world/: CMakeLists.txt  main.cpp
src/syllo-lib/: CMakeLists.txt  SylloLib.cpp  SylloLib.h
